--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,22 @@
         <junit.version>5.10.2</junit.version>
         <javafx.version>17.0.6</javafx.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>objectdb</id>
+            <name>ObjectDB Repository</name>
+            <url>https://m2.objectdb.com</url>
+        </repository>
+    </repositories>
 
     <dependencies>
+        <!-- ObjectDB -->
+        <dependency>
+            <groupId>com.objectdb</groupId>
+            <artifactId>objectdb</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+
         <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -28,12 +42,7 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- Hibernate -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.6.15.Final</version>
-        </dependency>
+
 
         <dependency>
             <groupId>javax.persistence</groupId>
@@ -41,12 +50,7 @@
             <version>2.2</version>
         </dependency>
 
-        <!-- MySQL JDBC -->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.33</version>
-        </dependency>
+
 
         <!-- Logger -->
         <dependency>
@@ -90,7 +94,7 @@
                 <version>0.0.8</version>
                 <configuration>
                     <!-- Nombre COMPLETO de tu clase Application -->
-                    <mainClass>org.example.javafx_hibernate.MainApp</mainClass>
+                    <mainClass>org.example.javafx_objectDB.MainApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
